--- a/CatalogAPI/CatalogAPI.csproj
+++ b/CatalogAPI/CatalogAPI.csproj
@@ -7,7 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="NLog" Version="5.3.4" />
+    <PackageReference Include="NLog.Web.AspNetCore" Version="5.3.15" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <None Include="NLog.config">
+    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>  
   </ItemGroup>
 
 </Project>
