--- a/CatalogAPI/Properties/launchSettings.json
+++ b/CatalogAPI/Properties/launchSettings.json
@@ -19,6 +19,21 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
+    "catalog": {
+      "commandName": "Project",
+      "dotnetRunMessages": true,
+      "launchBrowser": true,
+      "launchUrl": "swagger",
+      "applicationUrl": "https://localhost:7013;http://localhost:5178",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "CatalogImagePath": "C:/tmp/resources/images",
+        "MongoConnectionString": "CONNECTIONSSTRING INDSÆTTES HER",
+        "CatalogDatabase": "catalog",
+        "CatalogCollection": "products"
+
+      }
+    },
     "https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
