--- a/CatalogAPI/appsettings.json
+++ b/CatalogAPI/appsettings.json
@@ -1,9 +1,15 @@
 {
+  "MongoDB": {
+    "ConnectionString": "mongodb+srv://Admin:Password@auktionshuscluster.koi2w.mongodb.net/",
+    "DatabaseName": "CatalogDB",
+    "CollectionName": "Products"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
   "AllowedHosts": "*"
 }
+
