--- a/CatalogAPI/appsettings.json
+++ b/CatalogAPI/appsettings.json
@@ -1,8 +1,8 @@
 {
   "MongoDB": {
     "ConnectionString": "mongodb+srv://Admin:Password@auktionshuscluster.koi2w.mongodb.net/",
-    "DatabaseName": "CatalogDB",
-    "CollectionName": "Products"
+    "DatabaseName": "VareDB",
+    "CollectionName": "VareCollection"
   },
   "Logging": {
     "LogLevel": {
