--- a/CatalogAPI/CatalogAPI.csproj
+++ b/CatalogAPI/CatalogAPI.csproj
@@ -7,16 +7,18 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MongoDB.Driver" Version="3.0.0" />
-    <PackageReference Include="NLog" Version="5.3.4" />
-    <PackageReference Include="NLog.Config" Version="4.7.15" />
-    <PackageReference Include="NLog.Extensions.Logging" Version="5.3.15" />
-    <PackageReference Include="NLog.Targets.Loki" Version="2.2.0" />
-    <PackageReference Include="NLog.Web.AspNetCore" Version="5.3.15" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
-    <None Include="NLog.config">
+
+  <PackageReference Include="MongoDB.Driver" Version="3.0.0" />
+  <PackageReference Include="NLog" Version="5.3.4" />
+  <PackageReference Include="NLog.Extensions.Logging" Version="5.3.15" />
+  <PackageReference Include="NLog.Targets.Loki" Version="2.2.0" />
+  <PackageReference Include="NLog.Web.AspNetCore" Version="5.3.15" />
+  <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <None Update="NLog.config">
     <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-  </ItemGroup>
+  
+</ItemGroup>
+
 
 </Project>
