--- a/CatalogTestEnv/docker-compose.yml
+++ b/CatalogTestEnv/docker-compose.yml
@@ -13,6 +13,23 @@ services:
     volumes:
       - catalog-images:/srv/images
 
+  auth-service:
+    image: ____________________
+    container_name: authservice
+    ports:
+      - "5002:8080"
+    networks:
+      - mitnet
+
+  user-service:
+    image: ____________________
+    container_name: userservice
+    ports:
+      - "5003:8080"
+    networks:
+      - mitnet
+    
+
 
 volumes:
   catalog-images:
