--- a/CatalogAPI/CatalogAPI.csproj
+++ b/CatalogAPI/CatalogAPI.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-
+  <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.0" />
   <PackageReference Include="MongoDB.Driver" Version="3.0.0" />
   <PackageReference Include="NLog" Version="5.3.4" />
   <PackageReference Include="NLog.Extensions.Logging" Version="5.3.15" />
