--- a/CatalogTestEnv/docker-compose.yml
+++ b/CatalogTestEnv/docker-compose.yml
@@ -19,7 +19,7 @@ services:
     ports:
       - "5002:8080"
     networks:
-      - mitnet
+      - default
 
   user-service:
     image: cbjoedstrup/userservice-image
@@ -27,7 +27,7 @@ services:
     ports:
       - "5003:8080"
     networks:
-      - mitnet
+      - default
     
 
 
